nav bar fixed top on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,20 @@ body {
     cursor: pointer;
 }
 
+#nav-bar-spacer {
+    height: 50px;
+    width: 100%;
+}
+
 #mobile-nav {
     text-align: center;
     background-color: #333;
+
+    width: 100%;
+    position: fixed;
+    top: 0;
+
+    z-index: 9999;
 }
 
 #mobile-nav .container-fluid p {
